src/main/resources/static/projectSkeleton/css/catalog.css
* {
    /*box-sizing: border-box;*/
    margin: 0;
    padding: 0;
}

:root{
    /*--dark-blue:#05386B;*/
    /*--dark-green: rgb(55, 150, 131);*/
    /*--green: #5CDB95;*/
    /*--light-green: #8EE4AF;*/
    /*--grey: #EDF5E1;*/

    --light-black: #16171D;
    --black: #0b141a;
    --dense-gold: #b78846;
    --light-gold: #DBAB4D;
    --grey: #efefef;
    --dark-blue: rgb(54, 75, 179);
}

body, html {
    font-weight: 400;
    font-family: Lato, Arial, sans-serif;
}

body {
    margin: 0px;
    padding: 0px;
    height: 100%;
    width: 100%;

    position: relative;
    z-index: -1;
    background-color: var(--light-black);
}

a {
    color: inherit;
    text-decoration: none;
}

#nav {
    font: bold 12px Arial, Helvetica, Sans-serif;
    background-color: var(--black);
    border-bottom: 4px solid var(--light-gold);
    overflow: auto;
    width: 100%;
    min-width: 650px;
    height: 10vh;
    min-height: 90px;
    align-items: center;
    display: flex;
}

#nav>ul a {
    text-decoration: none;
    color: var(--grey);
    font-size: 20px;
    font-weight: bolder;
    position: relative;
    margin: 18px;
    padding: 4px 4px 5px 4px;
    border: 2px solid transparent;
}

#nav>a {
    border: 2px solid transparent;
}

#nav a:hover {
    cursor: pointer;
    color: var(--light-gold);
    font-weight: bolder;
    border: 2px solid var(--light-gold);
    border-radius: 5px;
}

#nav ul {
    margin: 0 0 0 auto;
    max-width: 50vw;
}

#nav ul li {
    display: inline;
    margin: 0 2px;
}

li::before {
    display: inline;
}

#nav>a>img {
    width: 90px;
    height: 80px;
    margin-left: 0.2em;
    margin-right: 0.2em;
}

header {
    align-items: center;
    background: white;
    display: flex;
    height: 10vh;
    justify-content: space-between;
    position: sticky;
    top: 0;
    width: 100%;
    transition: background 0.25s;
}

header.top {
    background: transparent;
}

.search {
    align-items: center;
    background: var(--grey);
    border-radius: 3em;
    box-shadow: var(--dense-gold) 0px 7px 20px 0px;
    cursor: pointer;
    display: flex;
    height: 50px;
    left: 50%;
    overflow: hidden;
    padding: 0 0 0 0.5em;
    position: absolute;
    top: 50%;
    transform: translate(-110%, -50%);
    width: 400px;
    transition: all 0.25s;
}
.top .search {
    max-width: 75%;
    height: 5em;
    top: 150%;
    transform: translate(-50%, 0);
    border-radius: 5em;
    width: 50em;
}

.input {
    border: 0;
    flex: 1;
    font-size: 1.5em;
    height: 100%;
    opacity: 1;
    outline: 0;
    padding: 0 0.75em;
    transition: all 0.25s;
    background-color: transparent;
    position: relative;
}
.top .input {
    opacity: 1;
    z-index: 1;
}

header .button {
    align-items: center;
    background: var(--dark-blue);
    border: 0;
    border-radius: 2.75em;
    display: flex;
    height: 2.75em;
    justify-content: center;
    margin: 0 0.75em;
    width: 2.75em;
    transition: all 0.25s;
    z-index: 1;
    cursor: pointer;
    min-width: 2.25vw;
}
header .button::before {
    font-size: 1.5em;
    transition: all 0.25s;
}
.top .button {
    width: 4.75em;
    height: 4.75em;
    border-radius: 4.75em;
}
.top .button::before {
    font-size: 2.5em;
}

#btn-back-to-top {
    position: fixed;
    bottom: 6vh;
    right: 20px;
    display: none;
    color: var(--grey);
    background-color: var(--dark-blue);
    border-radius: 40%;
}

.modal-content{
    background-color: var(--grey);
}

#openModalBtn{
    background-color: var(--dark-blue);
    border-color: transparent;
}

#saveSortBtn{
    background-color: var(--dense-gold);
    border-color: transparent;
}

#closeModalBtn{
    background-color: var(--light-black);
    border-color: transparent;
}

main{
    position: relative;
    z-index: -1;
}

#catalogCont{
    background-color: transparent !important;
    margin-top: 10vh;
    margin-bottom: 10vh;
}


.productCard:hover{
    transform: scale(1.03);
}

.productCard{
    background-color: var(--dense-gold);
}

.productCard *{
    color: var(--grey);
}

.cardBtn{
    border-color: var(--light-black);
    border-width: 2px;
    margin: 2px;
    border-radius: 10% !important;
}

.cardBtn:hover{
    background-color: var(--light-black);
    border-color: var(--light-black);
    color: var(--light-gold);
    transition: 0.5s;
}

body>footer {
    background-color: var(--black);
    width: 100%;
    height: 5vh;
    display: flex;
    font-size: 16px;
    justify-content: space-around;
    align-items: center;
    padding: 0 5px 0 3px;
    margin: 0%;
    margin-top: 25%;
    position: fixed;
    left: 0;
    bottom: 0;
    text-align: center;
    color: var(--grey);
    font-weight: bold;
}

